src/main/java/com/example/bankcards/exception/error/BadRequestException.java
package com.example.bankcards.exception.error;

public class BadRequestException extends RuntimeException {
    public BadRequestException(String message) {
        super(message);
    }
}
